Redo of the structure
Reorganized the structure of the files to have more control over the search.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Katya Grishanova</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="resorces/CSS/style.css">
         <nav>
             <a href="/about/">About</a> |
             <a href="/portfolio/">Portfolio</a> |
