Started to style with CSS
added Neumophism buttons and container

--- a/index.html
+++ b/index.html
@@ -3,18 +3,39 @@
     <head>
         <title>Katya Grishanova</title>
         <link rel="stylesheet" href="resorces/CSS/style.css">
-        <nav>
-            <a href="/about/">About</a> |
-            <a href="/portfolio/">Portfolio</a> |
-            <a href="/contact/">Contact</a> |
-          </nav>
     </head>
 
     <body>
+        <header>
+        <div class="nav">  
+            <ul>  
+                <li>  
+                <a href="/Katya-Portfolio/index.html"> Home </a> 
+                </li>  
+                <li>  
+               <a href="#"> Resume </a> 
+                </li>  
+                <li>  
+               <a href="#"> portfolio </a> 
+                </li>   
+            </ul>  
+        </div>  
+        </header>
 
-    </body>
 
-    <footer>
+        <div class="container">
+         <h1 class="inro">HI, I am Katya. </h1>
+         <h2 class="welcome">Welcome to my portfolio site.</h2>
+        </div>
+
+    <body>
+       
+    <footer>    
+        <ul class="footlinks">
+            <li>Resume</li>
+            <li>GitHub</li>
+            <li>LinkedIn</li>
+        </ul>
 
     </footer>
 </html>
