Css slide nav bar
1. Created a monocromatic there for my Home page.
2.  Created a nav bar slider to add interactivity.
3. Links at the bottom of the page change color on hover slowly.

--- a/index.html
+++ b/index.html
@@ -3,28 +3,26 @@
     <head>
         <title>Katya Grishanova</title>
         <link rel="stylesheet" href="resorces/CSS/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;700&display=swap" rel="stylesheet">
+
     </head>
 
     <body>
         <header>
         <div class="nav">  
             <ul>  
-                <li>  
-                <a href="/Katya-Portfolio/index.html"> Home </a> 
-                </li>  
-                <li>  
-               <a href="#"> Resume </a> 
-                </li>  
-                <li>  
-               <a href="#"> portfolio </a> 
-                </li>   
+                <li class="one"><a href="#">Home</a></li> 
+                <li class="two"><a href="#">Portfolio</a></li> 
+                <li class="three"><a href="#">About</a></li> 
+                
+                <hr/>
             </ul>  
         </div>  
         </header>
 
 
         <div class="container">
-         <h1 class="inro">HI, I am Katya. </h1>
+         <h1 class="inro">Hi, I am Katya.</h1>
          <h2 class="welcome">Welcome to my portfolio site.</h2>
         </div>
 
@@ -37,5 +35,6 @@
             <li>LinkedIn</li>
         </ul>
 
+        <p>  Katya Grishanova 2023</p>
     </footer>
 </html>
