--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
        
     <footer>    
         <ul class="footlinks">
-            <li>Resume</li>
-            <li>GitHub</li>
-            <li>LinkedIn</li>
+            <li><a href=""></a>Resume</li>
+            <li><a href="https://github.com/GoForKatya" target="_blank">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/katya-grishanova/" target="_blank">LinkedIn</a></li>
         </ul>
 
         <p>  Katya Grishanova 2023</p>
