Added a skill bar
Used CSS animation @keyframe to make a akill bar to showcase my CSS skills

--- a/index.html
+++ b/index.html
@@ -22,8 +22,41 @@
 
 
         <div class="container">
-         <h1 class="inro">Hi, I am Katya.</h1>
-         <h2 class="welcome">Welcome to my portfolio site.</h2>
+                <h1 class="inro">Hi, I am Katya.</h1>
+                <h2 class="welcome">Welcome to my portfolio site.</h2>
+        </div>
+        
+        <div class="wrapper">
+            <div class="line">
+            <h2>Skills</h2>
+            <div class="skills">
+                <div class="details">
+                  <span>HTML</span>
+                  <span>90%</span>
+                </div>
+                <div class="bar">
+                   <div id="html-bar"></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="details">
+                  <span>CSS</span>
+                  <span>75%</span>
+                </div>
+                <div class="bar">
+                   <div id="css-bar"></div>
+                </div>
+              </div>
+              <div class="skills">
+                <div class="details">
+                  <span>Javascript</span>
+                  <span>72%</span>
+                </div>
+                <div class="bar">
+                   <div id="javascript-bar"></div>
+                </div>
+              </div>
+            </div>
         </div>
 
     <body>
