Added a download Resume

--- a/index.html
+++ b/index.html
@@ -56,18 +56,15 @@
         </div>
         <div class="container">
             <h1 class="inro">Hi, I am Katya.</h1>
-            <p class="welcome">I am passionate about building things for the web. I started my journey as a developer when I was working my first restaurant job. A mom and pop Italian place desperately needed a website makeover.
-                In the years, I have cultivated my passion for coding by studying the IT field, but most of all, by building web pages using HTML, CSS and JavaScript, so I could help my friends in the restaurant business.
-                Lately, I have discovered my passion for the world of web development and the beauty behind building useful websites like the one you will find in this portfolio. I’m now looking for a junior dev position to finally kick start my career and learn among professionals.
-            </p>
-        </div>
-    </div>
+            <p class="welcome">I am passionate about building things for the web.</p>
+
+            </div>
 </main>
     <body>
        
     <footer>    
         <ul class="footlinks">
-            <li><a href=""></a>Resume</li>
+            <li><a href="/Katya-Portfolio/Katya Grishanova Resume.pdf" download=""></a>Resume</li>
             <li><a href="https://github.com/GoForKatya" target="_blank">GitHub</a></li>
             <li><a href="https://www.linkedin.com/in/katya-grishanova/" target="_blank">LinkedIn</a></li>
         </ul>
