Fixed the responsiveness of the site with Flex box

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         </div>  
         </header>
 <main>
-<div class="mainblock">
+<div class="container">
        
         
-        <div class="wrapper">
+        <div class="skills-sidebar">
             <div class="line">
             <h1>Skills</h1>
             <div class="skills">
@@ -54,7 +54,7 @@
               </div>
             </div>
         </div>
-        <div class="container">
+        <div class="about">
             <h1 class="inro">Hi, I am Katya.</h1>
             <p class="welcome">I am passionate about building things for the web.</p>
 
