adding @media to site

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <title>Katya Grishanova</title>
         <link rel="stylesheet" href="resorces/CSS/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;700&display=swap" rel="stylesheet">
-
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     </head>
 
     <body>
@@ -56,7 +57,7 @@
         </div>
         <div class="about">
             <h1 class="inro">Hi, I am Katya.</h1>
-            <p class="welcome">I am passionate about building things for the web.</p>
+            <p class="welcome">My expertise lies in HTML, CSS, JavaScript, and React, and I have a solid understanding of responsive design and cross-browser compatibility. I have successfully delivered several projects that have received positive feedback from clients for their clean and modern design, and seamless user experience.</p>
 
             </div>
 </main>
