--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
               </div>
             </div>
         </div>
+
+        <div class="portf">
+          <h1>My Projects</h1>
+          <div class="guessing-game"><a href="https://github.com/GoForKatya" target="_blank">Guessing Numbers with Leo</a></div>
+        </div>
         
 </main>
     <body>
