--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <div class="portf">
           <h1>My Projects</h1>
-          <div class="guessing-game"><a href="https://github.com/GoForKatya" target="_blank">Guessing Numbers with Leo</a></div>
+          <div class="guessing-game"><a href="https://goforkatya.github.io/number-guesser/" target="_blank">Guessing Numbers with Leo</a></div>
         </div>
         
 </main>
